[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
enum-iterator = "1.4.1"
fsum = "0.1.2"
lazy_static = "1.4.0"
quote = "1.0.33"
rand = "0.8.5"
regex = "1.10.2"
strum = "0.25"
strum_macros = "0.25.2"
syn = "2.0.31"
